# Custom-Node-ComfyUI-NBP-Uncut

./: .gitignore  README.md  __init__.py  nano_banana_node.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
