[project]
name = "custom-node-comfyui-nbp-uncut"
description = "Node to use NBP with custom API key to improve data privacy control."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["google-genai>=1.55.0", "pillow", "numpy"]

[project.urls]
Repository = "https://github.com/This-is-Uncut/Custom-Node-ComfyUI-NBP-Uncut"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/This-is-Uncut/Custom-Node-ComfyUI-NBP-Uncut/wiki"
"Bug Tracker" = "https://github.com/This-is-Uncut/Custom-Node-ComfyUI-NBP-Uncut/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Custom-Node-ComfyUI-NBP-Uncut"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

